RESOLVED FIXED93837
[SOUP][WK2] Missing LocalTerminationDisabler in WebCookieManager::setCookiePersistentStorage()
https://bugs.webkit.org/show_bug.cgi?id=93837
Summary [SOUP][WK2] Missing LocalTerminationDisabler in WebCookieManager::setCookiePe...
Chris Dumez
Reported 2012-08-13 06:33:50 PDT
SOUP-specific implementation of WebCookieManager::setCookiePersistentStorage() is missing a WebCore::LocalTerminationDisabler.
Attachments
Patch (1.70 KB, patch)
2012-08-13 06:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-08-13 06:36:18 PDT
Carlos Garcia Campos
Comment 2 2012-08-13 08:49:49 PDT
Comment on attachment 157983 [details] Patch Good catch, thanks!
WebKit Review Bot
Comment 3 2012-08-13 09:36:59 PDT
Comment on attachment 157983 [details] Patch Clearing flags on attachment: 157983 Committed r125421: <http://trac.webkit.org/changeset/125421>
WebKit Review Bot
Comment 4 2012-08-13 09:37:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.