[SOUP][WK2] Missing LocalTerminationDisabler in WebCookieManager::setCookiePersistentStorage() https://bugs.webkit.org/show_bug.cgi?id=93837

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-08-13
Reviewed by Carlos Garcia Campos.

Add missing WebCore::LocalTerminationDisabler in
WebCookieManager::setCookiePersistentStorage() to
temporarily disable process termination.

* WebProcess/Cookies/soup/WebCookieManagerSoup.cpp:
(WebKit::WebCookieManager::setCookiePersistentStorage):

Canonical link: https://commits.webkit.org/111696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125421 268f45cc-cd09-0410-ab3c-d52691b4dbfc